versioned_docs/version-2026.1.1/sala/outros/a_definir.mdx
---
slug: /sala/a_definir
sidebar_label: A definir
---
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "A definir",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "DESENHO TÉCNICO (523)",
          "size": 1,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Física II",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2020-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "GEOGRAFIA I (534)",
          "size": 1,
          "teachers": [
            "Jhones Donizetti Mendes"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Geografia I (503)",
          "size": 1,
          "teachers": [
            "Jhones Donizetti Mendes"
          ],
          "classroom": "A definir",
          "students": [
            "COM2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "LABORATÓRIO DE BANCO DE DADOS (535)",
          "size": 1,
          "teachers": [
            "Douglas Barbosa Sousa"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "PROJETO INTEGRADOR III",
          "size": 1,
          "teachers": [
            "Douglas Barbosa Sousa"
          ],
          "classroom": "A definir",
          "students": [
            "IIN2019-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Projeto Integrador III (501)",
          "size": 1,
          "teachers": [
            "Tiago Amaral Silva"
          ],
          "classroom": "A definir",
          "students": [
            "COM2023-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "SOCIOLOGIA I (529)",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "SOCIOLOGIA I (536)",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "SOCIOLOGIA II (521)",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga-Sociologia"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Física II",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2020-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "GEOGRAFIA I (534)",
          "size": 1,
          "teachers": [
            "Jhones Donizetti Mendes"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Geografia I (503)",
          "size": 1,
          "teachers": [
            "Jhones Donizetti Mendes"
          ],
          "classroom": "A definir",
          "students": [
            "COM2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "LABORATÓRIO DE BANCO DE DADOS (535)",
          "size": 1,
          "teachers": [
            "Douglas Barbosa Sousa"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "PROJETO INTEGRADOR III",
          "size": 1,
          "teachers": [
            "Douglas Barbosa Sousa"
          ],
          "classroom": "A definir",
          "students": [
            "IIN2019-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Projeto Integrador III (501)",
          "size": 1,
          "teachers": [
            "Tiago Amaral Silva"
          ],
          "classroom": "A definir",
          "students": [
            "COM2023-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "SOCIOLOGIA I (536)",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "FILOSOFIA II (532)",
          "size": 1,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "FÍSICA II (533)",
          "size": 1,
          "teachers": [
            "Vitor Prestes Luzio"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Física II (502)",
          "size": 1,
          "teachers": [
            "Vitor Prestes Luzio"
          ],
          "classroom": "A definir",
          "students": [
            "COM2024-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "FÍSICA II (533)",
          "size": 1,
          "teachers": [
            "Vitor Prestes Luzio"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Física II (502)",
          "size": 1,
          "teachers": [
            "Vitor Prestes Luzio"
          ],
          "classroom": "A definir",
          "students": [
            "COM2024-DP"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "LÍNGUA PORTUGUESA III (512)",
          "size": 1,
          "teachers": [
            "Kátia Cristiane Kobus Novaes"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2023-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "TECNOLOGIA DOS MATERIAIS (530)",
          "size": 1,
          "teachers": [
            "Fábio Fernandes da Silva"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "FILOSOFIA I (524)",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "LÍNGUA PORTUGUESA III (512)",
          "size": 1,
          "teachers": [
            "Kátia Cristiane Kobus Novaes"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2023-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "TECNOLOGIA DOS MATERIAIS (530)",
          "size": 1,
          "teachers": [
            "Fábio Fernandes da Silva"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "FISICA I (541)",
          "size": 1,
          "teachers": [
            "Flavia Satie Noguti"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024B-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "FISICA I (545)",
          "size": 1,
          "teachers": [
            "Flavia Satie Noguti"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "GEOGRAFIA II (516)",
          "size": 1,
          "teachers": [
            "Alexandre Roberto Valcarenghi"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Matemática I (506)",
          "size": 1,
          "teachers": [
            "Elizangela Mendes Pereira"
          ],
          "classroom": "A definir",
          "students": [
            "COM2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Projeto Integrador I (507)",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "COM2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "QUÍMICA II (493)",
          "size": 1,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "QUÍMICA II (520)",
          "size": 1,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "FISICA I (541)",
          "size": 1,
          "teachers": [
            "Flavia Satie Noguti"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024B-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "FISICA I (545)",
          "size": 1,
          "teachers": [
            "Flavia Satie Noguti"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Matemática I (506)",
          "size": 1,
          "teachers": [
            "Elizangela Mendes Pereira"
          ],
          "classroom": "A definir",
          "students": [
            "COM2025-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Projeto Integrador I (507)",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "COM2025-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "QUÍMICA II (493)",
          "size": 1,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "QUÍMICA II (520)",
          "size": 1,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "ARTES II (489)",
          "size": 1,
          "teachers": [
            "Josiane Paula Maltauro"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "FÍSICA II (542)",
          "size": 1,
          "teachers": [
            "Flavia Satie Noguti"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024B-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "ARTES II (489)",
          "size": 1,
          "teachers": [
            "Josiane Paula Maltauro"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "FÍSICA II (542)",
          "size": 1,
          "teachers": [
            "Flavia Satie Noguti"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024B-DP"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "FISICA I (525)",
          "size": 1,
          "teachers": [
            "Docente DP Física"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "FÍSICA II (515)",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "FÍSICA IV (508)",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2022-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "LÍNGUA ESTRANGEIRA MODERNA I - INGLÊS (517)",
          "size": 1,
          "teachers": [
            "Patricia Denicolo David Prati"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "MATEMÁTICA I (548)",
          "size": 1,
          "teachers": [
            "Felipe Fraga de Oliveira"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "MATEMÁTICA II (543)",
          "size": 1,
          "teachers": [
            "Felipe Fraga de Oliveira"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024B-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "PROJETO INTEGRADOR I (549)",
          "size": 1,
          "teachers": [
            "Sergio Ricardo Ferrazoli"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "FÍSICA IV (508)",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2022-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "LÓGICA DE PROGRAMAÇÃO (547)",
          "size": 1,
          "teachers": [
            "Sergio Ricardo Ferrazoli"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "MATEMÁTICA I (548)",
          "size": 1,
          "teachers": [
            "Felipe Fraga de Oliveira"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "MATEMÁTICA II (543)",
          "size": 1,
          "teachers": [
            "Felipe Fraga de Oliveira"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024B-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "PROJETO INTEGRADOR I (549)",
          "size": 1,
          "teachers": [
            "Sergio Ricardo Ferrazoli"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "LINGUAGENS DE APRESENTAÇÃO E ESTRUTURAÇÃO DE CONTEÚDOS (546)",
          "size": 1,
          "teachers": [
            "Sergio Ricardo Ferrazoli"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "LÓGICA DE PROGRAMAÇÃO (547)",
          "size": 1,
          "teachers": [
            "Sergio Ricardo Ferrazoli"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "LINGUAGENS DE APRESENTAÇÃO E ESTRUTURAÇÃO DE CONTEÚDOS (546)",
          "size": 1,
          "teachers": [
            "Sergio Ricardo Ferrazoli"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "EDUCAÇÃO FÍSICA I (544)",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "EDUCAÇÃO FÍSICA II (540)",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024B-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Gestão de Pessoas (505)",
          "size": 1,
          "teachers": [
            "Haroldo Yutaka Misunaga"
          ],
          "classroom": "A definir",
          "students": [
            "COM2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "LÍNGUA ESTRANGEIRA MODERNA - ESPANHOL (526)",
          "size": 1,
          "teachers": [
            "Michelli Cristina Galli"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "LÍNGUA PORTUGUESA E LITERATURA BRASILEIRA I (498)",
          "size": 1,
          "teachers": [
            "Docente DP Letras"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Língua Portuguesa e Literatura II (491)",
          "size": 1,
          "teachers": [
            "Docente DP Letras"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "EDUCAÇÃO FÍSICA I (544)",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "EDUCAÇÃO FÍSICA II (540)",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024B-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Gestão de Pessoas (505)",
          "size": 1,
          "teachers": [
            "Haroldo Yutaka Misunaga"
          ],
          "classroom": "A definir",
          "students": [
            "COM2025-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Língua Portuguesa e Literatura I (498)",
          "size": 1,
          "teachers": [
            "Docente DP Letras"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2025-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Língua Portuguesa e Literatura II (491)",
          "size": 1,
          "teachers": [
            "Docente DP Letras"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "FILOSOFIA I (514)",
          "size": 1,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "FILOSOFIA I (531)",
          "size": 2,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# A definir

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
