versioned_docs/version-2026.1.5/sala/outros/a_definir.mdx
---
slug: /sala/a_definir
sidebar_label: A definir
---
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "A definir",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Física II",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2020-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "GEOGRAFIA I (534)",
          "size": 1,
          "teachers": [
            "Jhones Donizetti Mendes"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "LABORATÓRIO DE BANCO DE DADOS (535)",
          "size": 1,
          "teachers": [
            "Douglas Barbosa Sousa"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "PROJETO INTEGRADOR III",
          "size": 1,
          "teachers": [
            "Douglas Barbosa Sousa"
          ],
          "classroom": "A definir",
          "students": [
            "IIN2019-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "SOCIOLOGIA I (529)",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "SOCIOLOGIA I (536)",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "SOCIOLOGIA II (521)",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga-Sociologia"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Física II",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2020-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "GEOGRAFIA I (534)",
          "size": 1,
          "teachers": [
            "Jhones Donizetti Mendes"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "LABORATÓRIO DE BANCO DE DADOS (535)",
          "size": 1,
          "teachers": [
            "Douglas Barbosa Sousa"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Orientação de Projeto Integrador",
          "size": 1,
          "teachers": [
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "A definir",
          "students": [
            "COM2024-PI"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "PROJETO INTEGRADOR III",
          "size": 1,
          "teachers": [
            "Douglas Barbosa Sousa"
          ],
          "classroom": "A definir",
          "students": [
            "IIN2019-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "SOCIOLOGIA I (536)",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "FILOSOFIA I",
          "size": 1,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "FILOSOFIA II (532)",
          "size": 1,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "FÍSICA I (723)",
          "size": 1,
          "teachers": [
            "Vitor Prestes Luzio"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "FÍSICA II (533)",
          "size": 1,
          "teachers": [
            "Vitor Prestes Luzio"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Física II (502)",
          "size": 1,
          "teachers": [
            "Vitor Prestes Luzio"
          ],
          "classroom": "A definir",
          "students": [
            "COM2024-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Orientação de Projeto Integrador",
          "size": 1,
          "teachers": [
            "José Jurandir Pereira Júnior",
            "Vitor Prestes Luzio"
          ],
          "classroom": "A definir",
          "students": [
            "COM2024-PI"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "FÍSICA I (723)",
          "size": 1,
          "teachers": [
            "Vitor Prestes Luzio"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "FÍSICA II (533)",
          "size": 1,
          "teachers": [
            "Vitor Prestes Luzio"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Física II (502)",
          "size": 1,
          "teachers": [
            "Vitor Prestes Luzio"
          ],
          "classroom": "A definir",
          "students": [
            "COM2024-DP"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Orientação de Projeto Integrador",
          "size": 2,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "A definir",
          "students": [
            "COM2024-PI"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Orientação de Projeto Integrador",
          "size": 1,
          "teachers": [
            "José Jurandir Pereira Junior",
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "A definir",
          "students": [
            "COM2024-PI"
          ],
          "time": "16:45 - 17:35",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "LÍNGUA PORTUGUESA III (512)",
          "size": 1,
          "teachers": [
            "Kátia Cristiane Kobus Novaes"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2023-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Orientação de Projeto Integrador",
          "size": 1,
          "teachers": [
            "Haroldo Yutaka Misunaga"
          ],
          "classroom": "A definir",
          "students": [
            "COM2024-PI"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Orientação de Projeto Integrador",
          "size": 1,
          "teachers": [
            "Em fase de indicação"
          ],
          "classroom": "A definir",
          "students": [
            "COM2024-PI"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "FILOSOFIA I (514)",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "FILOSOFIA I (524)",
          "size": 1,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "LÍNGUA PORTUGUESA III (512)",
          "size": 1,
          "teachers": [
            "Kátia Cristiane Kobus Novaes"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2023-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "COM2024-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "COM2025-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "COM2026-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2025-AA"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "COM2024-AA"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "COM2025-AA"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "COM2026-AA"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Plano de marketing - Curricularização da Extensão",
          "size": 2,
          "teachers": [
            "PSS Administracao"
          ],
          "classroom": "A definir",
          "students": [
            "TGC2025-CE"
          ],
          "time": "16:45 - 17:35",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "FISICA I (541)",
          "size": 1,
          "teachers": [
            "Flavia Satie Noguti"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024B-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "FISICA I (545)",
          "size": 1,
          "teachers": [
            "Flavia Satie Noguti"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "FÍSICA II (542)",
          "size": 1,
          "teachers": [
            "Flavia Satie Noguti"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024B-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "GEOGRAFIA II (516)",
          "size": 1,
          "teachers": [
            "Alexandre Roberto Valcarenghi"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Matemática I (506)",
          "size": 1,
          "teachers": [
            "Elizangela Mendes Pereira"
          ],
          "classroom": "A definir",
          "students": [
            "COM2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Orientação de Projeto Integrador",
          "size": 1,
          "teachers": [
            "Mauro Cesar de Souza Siena"
          ],
          "classroom": "A definir",
          "students": [
            "COM2024-PI"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Orientação de Projeto Integrador",
          "size": 1,
          "teachers": [
            "Daiane Cristina da Silva"
          ],
          "classroom": "A definir",
          "students": [
            "COM2024-PI"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Projeto Integrador I (507)",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "COM2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "QUÍMICA I (724)",
          "size": 1,
          "teachers": [
            "Cosme Oliveira da Silva"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alex Soares de Brito"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alex Miyamoto Mussi"
          ],
          "classroom": "A definir",
          "students": [
            "ELE2025-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alex Miyamoto Mussi"
          ],
          "classroom": "A definir",
          "students": [
            "TAI2026-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "FISICA I (541)",
          "size": 1,
          "teachers": [
            "Flavia Satie Noguti"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024B-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "FISICA I (545)",
          "size": 1,
          "teachers": [
            "Flavia Satie Noguti"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "FÍSICA II (542)",
          "size": 1,
          "teachers": [
            "Flavia Satie Noguti"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024B-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Matemática I (506)",
          "size": 1,
          "teachers": [
            "Elizangela Mendes Pereira"
          ],
          "classroom": "A definir",
          "students": [
            "COM2025-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Orientação de Projeto Integrador",
          "size": 1,
          "teachers": [
            "Tiago Amaral Silva"
          ],
          "classroom": "A definir",
          "students": [
            "COM2024-PI"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Projeto Integrador I (507)",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "COM2025-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "QUÍMICA I (724)",
          "size": 1,
          "teachers": [
            "Cosme Oliveira da Silva"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "QUÍMICA II (493)",
          "size": 1,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "ARTES II (489)",
          "size": 1,
          "teachers": [
            "Josiane Paula Maltauro"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alex Miyamoto Mussi"
          ],
          "classroom": "A definir",
          "students": [
            "TAI2026-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alex Soares de Brito"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alex Miyamoto Mussi"
          ],
          "classroom": "A definir",
          "students": [
            "ELE2025-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "EDUCAÇÃO POSTURAL E SEGURANÇA DO TRABALHO",
          "size": 1,
          "teachers": [
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2025-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "MATEMÁTICA I (548)",
          "size": 1,
          "teachers": [
            "Felipe Fraga de Oliveira"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "MATEMÁTICA II (543)",
          "size": 1,
          "teachers": [
            "Felipe Fraga de Oliveira"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024B-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "ARTES II (489)",
          "size": 1,
          "teachers": [
            "Josiane Paula Maltauro"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alex Miyamoto Mussi"
          ],
          "classroom": "A definir",
          "students": [
            "ELE2025-AA"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alex Miyamoto Mussi"
          ],
          "classroom": "A definir",
          "students": [
            "TAI2026-AA"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "MATEMÁTICA I (548)",
          "size": 1,
          "teachers": [
            "Felipe Fraga de Oliveira"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "MATEMÁTICA II (543)",
          "size": 1,
          "teachers": [
            "Felipe Fraga de Oliveira"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024B-DP"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Marketing de Eventos - Curricularização da Extensão",
          "size": 1,
          "teachers": [
            "Alexandre José Schumacher"
          ],
          "classroom": "A definir",
          "students": [
            "TGC2025-CE"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alex Miyamoto Mussi"
          ],
          "classroom": "A definir",
          "students": [
            "ELE2025-AA"
          ],
          "time": "16:45 - 17:35",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alex Miyamoto Mussi"
          ],
          "classroom": "A definir",
          "students": [
            "TAI2026-AA"
          ],
          "time": "16:45 - 17:35",
          "color": ""
        },
        {
          "subject": "Marketing de Eventos - Curricularização da Extensão",
          "size": 1,
          "teachers": [
            "Alexandre José Schumacher"
          ],
          "classroom": "A definir",
          "students": [
            "TGC2025-CE"
          ],
          "time": "16:45 - 17:35",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alexandre José Schumacher"
          ],
          "classroom": "A definir",
          "students": [
            "TGC2025"
          ],
          "time": "17:35 - 19:00",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "FISICA I (525)",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2025-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "FÍSICA I (722)",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "FÍSICA II (515)",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "FÍSICA IV (508)",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2022-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "LÍNGUA ESTRANGEIRA MODERNA I - INGLÊS (517)",
          "size": 1,
          "teachers": [
            "Patricia Denicolo David Prati"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Orientação de Projeto Integrador",
          "size": 1,
          "teachers": [
            "Em fase de indicação"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2023-PI"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "FÍSICA I (722)",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "FÍSICA IV (508)",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2022-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Orientação de Projeto Integrador",
          "size": 1,
          "teachers": [
            "Em fase de indicação"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-PI"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Orientação de Projeto Integrador",
          "size": 1,
          "teachers": [
            "Em fase de indicação"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024B-PI"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Língua Portuguesa e Literatura Brasileira I (498)",
          "size": 2,
          "teachers": [
            "Patricia Denicolo David Prati"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2025-DP"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alexandre Rodrigues Monge"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025A-AA"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "EDUCAÇÃO FÍSICA I (544)",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "EDUCAÇÃO FÍSICA II (540)",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024B-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "FÍSICA I (721)",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Língua Portuguesa e Literatura II (491)",
          "size": 1,
          "teachers": [
            "Andrey Felipe Martins"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "PROJETO INTEGRADOR I (549)",
          "size": 1,
          "teachers": [
            "Sergio Ricardo Ferrazoli"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2025-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "COM2026-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "COM2025-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "COM2024-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Álvaro José de Almeida Araújo"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alexandre Rodrigues Monge"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025A-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alex Soares de Brito"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "EDUCAÇÃO FÍSICA I (544)",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "EDUCAÇÃO FÍSICA II (540)",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024B-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "FÍSICA I (721)",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "LÓGICA DE PROGRAMAÇÃO (547)",
          "size": 1,
          "teachers": [
            "Sergio Ricardo Ferrazoli"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Língua Portuguesa e Literatura II (491)",
          "size": 1,
          "teachers": [
            "Andrey Felipe Martins"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "PROJETO INTEGRADOR I (549)",
          "size": 1,
          "teachers": [
            "Sergio Ricardo Ferrazoli"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alexandre Rodrigues Monge"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2026A-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Álvaro José de Almeida Araújo"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alex Soares de Brito"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "AGO2025-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "COM2024-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "COM2025-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "COM2026-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "FILOSOFIA I (531)",
          "size": 1,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "FILOSOFIA I (725)",
          "size": 1,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "A definir",
          "students": [
            "EIN2023-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "LINGUAGENS DE APRESENTAÇÃO E ESTRUTURAÇÃO DE CONTEÚDOS (546)",
          "size": 1,
          "teachers": [
            "Sergio Ricardo Ferrazoli"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "LÓGICA DE PROGRAMAÇÃO (547)",
          "size": 1,
          "teachers": [
            "Sergio Ricardo Ferrazoli"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alexandre Rodrigues Monge"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2026A-AA"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "FILOSOFIA I (531)",
          "size": 1,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "LINGUAGENS DE APRESENTAÇÃO E ESTRUTURAÇÃO DE CONTEÚDOS (546)",
          "size": 1,
          "teachers": [
            "Sergio Ricardo Ferrazoli"
          ],
          "classroom": "A definir",
          "students": [
            "IIW2025B-DP"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alexandre José Schumacher"
          ],
          "classroom": "A definir",
          "students": [
            "TGC2025"
          ],
          "time": "17:35 - 19:00",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "17:35 - 19:00",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# A definir

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
